@@ -25,3 +25,5 @@ version = trunk
 eggs = python-dateutil
 control-script = manage
 local-apps = kyo
+apps = django-articles==2.0.2
+       http://github.com/downloads/carlitux/mtweets/mtweets-0.1-alpha.tar.gz
