@@ -1,17 +1,38 @@
 production_settings = '''
 from %(project)s.settings import *
+
+INSTALLED_APPS += (
+    # Uncomment the next line to enable the admin:
+    # 'django.contrib.admin',
+    # Uncomment the next line to enable admin documentation:
+    # 'django.contrib.admindocs',
+)
 '''
 
 development_settings = '''
 from %(project)s.settings import *
 DEBUG=True
 TEMPLATE_DEBUG=DEBUG
+
+INSTALLED_APPS += (
+    # Uncomment the next line to enable the admin:
+    # 'django.contrib.admin',
+    # Uncomment the next line to enable admin documentation:
+    # 'django.contrib.admindocs',
+)
 '''
 
 testing_settings = '''
 from %(project)s.settings import *
 DEBUG=True
 TEMPLATE_DEBUG=DEBUG
+
+INSTALLED_APPS += (
+    # Uncomment the next line to enable the admin:
+    # 'django.contrib.admin',
+    # Uncomment the next line to enable admin documentation:
+    # 'django.contrib.admindocs',
+)
 '''
 
 wsgi = '''#!/usr/bin/python
@@ -27,8 +48,8 @@ sys.path[0:0] = [
   %(path)s,
 ]
 
-from django.conf import settings
 os.environ["DJANGO_SETTINGS_MODULE"] = '%(arguments)s'
+from django.conf import settings
 
 from django.core.handlers.wsgi import WSGIHandler
 application = WSGIHandler()
@@ -44,8 +65,8 @@ sys.path[0:0] = [
   %(path)s,
 ]
 
-from django.conf import settings
 os.environ["DJANGO_SETTINGS_MODULE"] = '%(arguments)s'
+from django.conf import settings
 
 from django.core.servers.fastcgi import runfastcgi
 FCGI_OPTIONS = getattr(settings, 'FCGI_OPTIONS', {})
